--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/utils/validateAddress.js", "src/utils/getEventSignature.js", "src/utils/fetchSavingsContractCreatedEvent.js", "src/components/dashboard/SubmitBtn.tsx"],
   "exclude": ["node_modules"]
 }
