--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.53.2",
+    "ethers": "^5.7.2",
     "framer-motion": "^11.3.31",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-number-format": "^5.4.1",
     "react-scroll": "^1.9.0",
     "urql": "^4.1.0",
     "viem": "^2.21.1",
