--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.53.2",
     "ethers": "^5.7.2",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.31",
     "next": "14.2.7",
     "react": "^18",
@@ -20,7 +21,8 @@
     "react-scroll": "^1.9.0",
     "urql": "^4.1.0",
     "viem": "^2.21.1",
-    "wagmi": "^2.12.8"
+    "wagmi": "^2.12.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
