--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-number-format": "^5.4.1",
+    "react-player": "^2.16.0",
     "react-scroll": "^1.9.0",
     "urql": "^4.1.0",
     "viem": "^2.21.1",
