--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.53.2",
+    "bn.js": "^5.2.1",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.31",
@@ -24,6 +25,8 @@
     "urql": "^4.1.0",
     "viem": "^2.21.1",
     "wagmi": "^2.12.8",
+    "web3": "^4.12.1",
+    "web3-validator": "^2.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
